--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section id="pricing" class="pricing">
         <h1>Pricing </h1>
         <p>I don't charge for this tool cause i want the fact and truth to be free for all, so if you may please consider donating to the cause. You can either pledge an amount per month or a one-time payment. Thanks </p>
-        <a href="#" class="button">Dummy Button</a>
+        <a href="https://buy.stripe.com/6oEdU6aAv0uf3NS146" class="button">Dummy Button</a>
     </section>
 
 </body>
