--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
     <!-- Pricing Section -->
     <section id="pricing" class="pricing">
         <h1>Pricing </h1>
-        <p>I don't charge for this tool cause i want the fact and truth to be free for all, so if you may please consider donating to the cause. You can either pledge an amount per month or a one-time payment. Thanks </p>
-        <a href="https://buy.stripe.com/6oEdU6aAv0uf3NS146" class="button">Dummy Button</a>
+        <p>I don't charge for this tool cause i want the fact and truth to be free for all, so if you may please consider donating to the cause. You can pay £10 per Month to cover API, domain, and running costs. Thanks </p>
+        <p>I want to create an All encompassing Browser extension so more people can easily have access to verified info. If you want to collab send me an email (moyosulyman618@gmail.com)</p>
+
+        <a href="https://buy.stripe.com/6oEdU6aAv0uf3NS146" class="button">Support By Donating</a>
     </section>
 
 </body>
