--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         window.INTERAX_AI = {
           widgetID: "ai-fact-checker",
           ownerID: "643874fbe9f5200383b46ff3",
+        theme: "dark"
+
         };
       </script>
       <script id="interaxai-widget-script" defer="defer" src="https://cdn.jsdelivr.net/gh/interaxai/cdn@v1.16.0/dist/bundle.js"></script>
