--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <script type="text/javascript">
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-190782031-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KBVR25YLT2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-190782031-1');
+  gtag('config', 'G-KBVR25YLT2');
 </script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
