--- a/index.html
+++ b/index.html
@@ -4,15 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <script type="text/javascript"></script>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-KBVR25YLT2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-KBVR25YLT2');
-</script>
+<script defer src="/_vercel/insights/script.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script id="interaxai-widget-config">
